[package]
authors = ["Valentine Wallace <vwallace@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "ldk-tutorial-node"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlc-manager = {git = "https://github.com/p2pderivatives/rust-dlc", branch = "feature/split-tx-manager-2", features = ["use-serde"]}
dlc-messages = {git = "https://github.com/p2pderivatives/rust-dlc", branch = "feature/split-tx-manager-2"}
dlc-sled-storage-provider = {git = "https://github.com/p2pderivatives/rust-dlc", branch = "feature/split-tx-manager-2"}
electrs-blockchain-provider = {git = "https://github.com/p2pderivatives/rust-dlc", branch = "feature/split-tx-manager-2"}
lightning = {version = "0.0.112", git = "https://github.com/p2pderivatives/rust-lightning/", branch = "split-tx-experiment", features = ["max_level_trace"]}
lightning-background-processor = {version = "0.0.112", git = "https://github.com/p2pderivatives/rust-lightning/", branch = "split-tx-experiment"}
lightning-block-sync = {version = "0.0.112", features = ["rpc-client"], git = "https://github.com/p2pderivatives/rust-lightning/", branch = "split-tx-experiment"}
lightning-invoice = {version = "0.20", git = "https://github.com/p2pderivatives/rust-lightning/", branch = "split-tx-experiment"}
lightning-net-tokio = {version = "0.0.112", git = "https://github.com/p2pderivatives/rust-lightning/", branch = "split-tx-experiment"}
lightning-persister = {version = "0.0.112", git = "https://github.com/p2pderivatives/rust-lightning/", branch = "split-tx-experiment"}
lightning-rapid-gossip-sync = {version = "0.0.112", git = "https://github.com/p2pderivatives/rust-lightning/", branch = "split-tx-experiment"}
p2pd-oracle-client = {git = "https://github.com/p2pderivatives/rust-dlc", branch = "feature/split-tx-manager-2"}
simple-wallet = {git = "https://github.com/p2pderivatives/rust-dlc", branch = "feature/split-tx-manager-2"}

base64 = "0.13.0"
bech32 = "0.8"
bitcoin = "0.29"
bitcoin-bech32 = "0.12"
hex = "0.3"

chrono = "0.4"
futures = "0.3"
rand = "0.4"
serde = "1.0"
serde_json = {version = "1.0"}
serde_yaml = "0.8"
tokio = {version = "1", features = ["io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time"]}

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
